# examples-rs

hello-world-tonic/: Cargo.toml
hello-world-tonic/src/: client.rs
identicon/: .gitignore  Cargo.toml  Dockerfile  compose.yaml
identicon/db/: init.sql
identicon/proto/: helloworld.proto
identicon/src/: identicon.rs  main.rs  server.rs
identicon/src/db/: postgres.rs
identicon/src/identicon/: color.rs  draw.rs  file.rs  grid.rs  name.rs  pixel.rs
identicon/src/protocol/: grpc.rs  rest.rs
mod-exa/: Cargo.toml
mod-exa/src/: bank.rs  main.rs  merge.rs  validator.rs
mod-exa/src/bank/: transactions.rs
mod-exa/src/merge/: name.rs
mod-exa/src/validator/: country.rs
tokior/: Cargo.toml
tokior/examples/: hello-redis.rs
word-count/src/: main.rs
word-count/src/files/: mod.rs
