[package]
name = "identicon"
version = "0.1.0"
edition = "2024"

[dependencies]
md5 = "0.8.0"
image = "0.25.10"
string-builder = "0.2.0"
tonic = "*"
prost = "0.14"
tonic-prost = "*"
tonic-types = "*"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
postgres = "0.19.13"

[build-dependencies]
tonic-prost-build = "*"
